[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "oldest-supported-numpy"
]

[project]
name = "tstoolbox"
dynamic = ["readme", "version"]
description = "Command line script and Python library to manipulate time series."
dependencies = [
    "cltoolbox >= 1.0.0",
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "statsmodels",
    "pydantic",
    "typing-extensions",
    "pyaf",
    "HydroErr",
    "plottoolbox >= 102.1.1",
    "toolbox_utils >= 3.0.0, < 4.0.0"
]
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
    "time-series",
    "cli-app",
    "aggregate",
    "fill",
    "filter"
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "blacken-docs",
    "black-nbconvert",
    "cleanpy",
    "commitizen",
    "coverage[toml]",
    "isort",
    "mypy",
    "pre-commit",
    "pyflakes",
    "pylama",
    "pyle",
    "pylint",
    "pyre",
    "pyroma",
    "pytest",
    "pytest-cov",
    "pytest-mpl",
    "pyupgrade",
    "ruff",
    "twine",
    "unimport",
    "velin",
    "vulture"
]

[project.scripts]
tstoolbox = "tstoolbox.tstoolbox:main"

[project.urls]
documentation = "https://timcera.bitbucket.io/tstoolbox/docs/index.html#tstoolbox-documentation"
github = "https://github.com/timcera/tstoolbox"
bitbucket = "https://bitbucket.org/timcera/tstoolbox/src/main/"

[tool.check-manifest]
ignore = [
    "docs/_function_autosummary/*",
    ".coverage",
    ".deepsource.toml",
    ".ipynb_checkpoints/*"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "106.0.0"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
exclude = ["examples*", "tools*", "docs*", "tstoolbox.tests*"]
where = ["src"]

[tool.setuptools_scm]
