[metadata]
name = tstoolbox
author = Tim Cera, PE
author_email = tim@cerazone.net
version = file: VERSION
description = Command line script and Python library to manipulate time series.
long_description = file: README.rst
url = https://timcera.bitbucket.io/
keywords = time-series
license = BSD 3-Clause License
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Science/Research
        Intended Audience :: End Users/Desktop
        Intended Audience :: Developers
        Environment :: Console
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Operating System :: OS Independent
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Topic :: Scientific/Engineering :: Information Analysis
        Topic :: Scientific/Engineering
        Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    documentation = https://timcera.bitbucket.io/tstoolbox/docs/index.html#tstoolbox-documentation,
    github = https://github.com/timcera/tstoolbox,
    bitbucket = https://bitbucket.org/timcera/tstoolbox/src/master/

[options]
zip_safe = False
include_package_data = True
install_requires =
    dateparser
    tabulate
    docutils
    mando >= 0.4
    rst2ansi >= 0.1.5
    python-dateutil >= 2.1
    numpy
    scipy
    pandas
    pint-pandas
    matplotlib
    xlsxwriter
    scikit-learn
    statsmodels
    setuptools
    typical>=2.6.0
    typing-extensions
    pyaf
    xlrd >= 1.0.0
    openpyxl
    odfpy
    HydroErr
    plottoolbox
    wdmtoolbox
    hspfbintoolbox
    python_version>="3.7.1"
package_dir=
    =src
packages=find:


[options.package_data]
* = *.txt, *.rst
SciencePlots = *.mplstyle


[options.entry_points]
console_scripts =
    tstoolbox = tstoolbox.tstoolbox:main

[options.extras_require]
dev =   black
        cleanpy
        twine
        pytest
        coverage[toml]
        flake8
        pytest-cov
        pytest-mpl
        pre-commit
        black-nbconvert
        blacken-docs
        velin
        isort
        pyroma
        pyupgrade
        commitizen

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tstoolbox.tests*
where=src

[upload_docs]
upload_dir = docs/_build/html

[coverage:run]
relative_files = True
